# harenae-rs

./: Cargo.toml
benches/: rule_generation.rs
notes/: General.md
src/: lib.rs  main.rs  util.rs
src/falling_sand/: chunk.rs  element.rs  mod.rs  rules.rs  systems.rs
src/gfx/: context.rs
