[package]
name = "haranae-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.1"
criterion = "0.5.1"
ndarray = { version = "0.15.6", features = ["rayon"] }
rand = "0.8.5"
rayon = "1.8.1"

[profile.dev.package."*"]
opt-level = 3

[[bench]]
name = "rule_generation"
harness = false
